@@ -1,3 +1,7 @@
+2008-12-24  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* PreferCharOverloadTest.cs: New. Unit tests for PreferCharOverloadRule
+
 2008-12-11  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* AvoidUncalledPrivateCodeTest.cs: Add test cases for multidim and
